// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformMarkdownWithReact > discovers nested, expression, and fragment islands from the MDX AST 1`] = `
"
import React, { useEffect, useRef, createElement } from 'react';
import { createRoot } from 'react-dom/client';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Callout from '../src/components/Callout.tsx';
import Badge from '../src/components/Badge.tsx';

export const frontmatter = {};

const rawHtml = "<div class=\\"ox-island\\" data-ox-island=\\"Callout\\"><h1 id=\\"title\\">Title</h1>\\n<div class=\\"ox-island\\" data-ox-island=\\"Badge\\" data-ox-props=\\"{&quot;expressions&quot;:{},&quot;props&quot;:{&quot;title&quot;:&quot;hi&quot;},&quot;spreads&quot;:[]}\\"><script type=\\"application/json\\">{\\"expressions\\":{},\\"props\\":{\\"title\\":\\"hi\\"},\\"spreads\\":[]}</script></div>\\n</div>\\n";
const components = {
  Callout,
  Badge,
};

function createReactHydrate() {
  const mountedRoots = [];

  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    const islandContent = readIslandSlotHtml(element);
    const vnode = islandContent
      ? createElement(
          Component,
          props,
          createElement('div', { dangerouslySetInnerHTML: { __html: islandContent } })
        )
      : createElement(Component, props);

    const root = createRoot(element);
    root.render(vnode);
    mountedRoots.push(root);

    return () => root.unmount();
  };
}

export default function MarkdownContent() {
  const containerRef = useRef(null);

  useEffect(() => {
    if (!containerRef.current) return;
    const controller = initIslands(createReactHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    return () => controller.destroy();
  }, []);

  return createElement('div', {
    className: 'ox-content',
    ref: containerRef,
    dangerouslySetInnerHTML: { __html: rawHtml },
  });
}
"
`;

exports[`transformMarkdownWithReact > discovers nested, expression, and fragment islands from the MDX AST 2`] = `
"
import React, { useEffect, useRef, createElement } from 'react';
import { createRoot } from 'react-dom/client';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Alert from '../src/components/Alert.tsx';

export const frontmatter = {};

const rawHtml = "<div class=\\"ox-island\\" data-ox-island=\\"Alert\\" data-ox-props=\\"{&quot;expressions&quot;:{&quot;count&quot;:&quot;count + 1&quot;,&quot;title&quot;:&quot;foo&quot;},&quot;props&quot;:{},&quot;spreads&quot;:[]}\\"><script type=\\"application/json\\">{\\"expressions\\":{\\"count\\":\\"count + 1\\",\\"title\\":\\"foo\\"},\\"props\\":{},\\"spreads\\":[]}</script></div>\\n";
const components = {
  Alert,
};

function createReactHydrate() {
  const mountedRoots = [];

  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    const islandContent = readIslandSlotHtml(element);
    const vnode = islandContent
      ? createElement(
          Component,
          props,
          createElement('div', { dangerouslySetInnerHTML: { __html: islandContent } })
        )
      : createElement(Component, props);

    const root = createRoot(element);
    root.render(vnode);
    mountedRoots.push(root);

    return () => root.unmount();
  };
}

export default function MarkdownContent() {
  const containerRef = useRef(null);

  useEffect(() => {
    if (!containerRef.current) return;
    const controller = initIslands(createReactHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    return () => controller.destroy();
  }, []);

  return createElement('div', {
    className: 'ox-content',
    ref: containerRef,
    dangerouslySetInnerHTML: { __html: rawHtml },
  });
}
"
`;

exports[`transformMarkdownWithReact > discovers nested, expression, and fragment islands from the MDX AST 3`] = `
"
import React, { useEffect, useRef, createElement } from 'react';
import { createRoot } from 'react-dom/client';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Alert from '../src/components/Alert.tsx';

export const frontmatter = {};

const rawHtml = "<div class=\\"ox-island\\" data-ox-island=\\"Alert\\" data-ox-props=\\"{&quot;expressions&quot;:{},&quot;props&quot;:{&quot;tone&quot;:&quot;info&quot;},&quot;spreads&quot;:[]}\\"><script type=\\"application/json\\">{\\"expressions\\":{},\\"props\\":{\\"tone\\":\\"info\\"},\\"spreads\\":[]}</script></div>\\n";
const components = {
  Alert,
};

function createReactHydrate() {
  const mountedRoots = [];

  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    const islandContent = readIslandSlotHtml(element);
    const vnode = islandContent
      ? createElement(
          Component,
          props,
          createElement('div', { dangerouslySetInnerHTML: { __html: islandContent } })
        )
      : createElement(Component, props);

    const root = createRoot(element);
    root.render(vnode);
    mountedRoots.push(root);

    return () => root.unmount();
  };
}

export default function MarkdownContent() {
  const containerRef = useRef(null);

  useEffect(() => {
    if (!containerRef.current) return;
    const controller = initIslands(createReactHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    return () => controller.destroy();
  }, []);

  return createElement('div', {
    className: 'ox-content',
    ref: containerRef,
    dangerouslySetInnerHTML: { __html: rawHtml },
  });
}
"
`;

exports[`transformMarkdownWithReact > honors disabled built-in embeds from framework options 1`] = `
"
import React, { createElement } from 'react';

export const frontmatter = {};

const rawHtml = "<github repo=\\"ubugeeei-prod/ox-content\\"></github>\\n";

export default function MarkdownContent() {
  return createElement('div', {
    className: 'ox-content',
    dangerouslySetInnerHTML: { __html: rawHtml },
  });
}
"
`;

exports[`transformMarkdownWithReact > turns registered components into islands and leaves fenced tags literal 1`] = `
"
import React, { useEffect, useRef, createElement } from 'react';
import { createRoot } from 'react-dom/client';
import { initIslands, readIslandSlotHtml } from '@ox-content/islands';
import Alert from '../src/components/Alert.tsx';

export const frontmatter = {"title":"React Guide","draft":false};

const rawHtml = "<h1 id=\\"react-guide\\">React Guide</h1>\\n<div data-ox-island=\\"Alert\\" data-ox-props='{\\"tone\\":\\"info\\",\\"active\\":true}' data-ox-content='Read **docs**.'></div>\\n<pre><code class=\\"language-tsx\\">&lt;Alert tone=&quot;code&quot; /&gt;\\n</code></pre>\\n";
const components = {
  Alert,
};

function createReactHydrate() {
  const mountedRoots = [];

  return (element, props) => {
    const componentName = element.dataset.oxIsland;
    const Component = components[componentName];
    if (!Component) return;

    const islandContent = readIslandSlotHtml(element);
    const vnode = islandContent
      ? createElement(
          Component,
          props,
          createElement('div', { dangerouslySetInnerHTML: { __html: islandContent } })
        )
      : createElement(Component, props);

    const root = createRoot(element);
    root.render(vnode);
    mountedRoots.push(root);

    return () => root.unmount();
  };
}

export default function MarkdownContent() {
  const containerRef = useRef(null);

  useEffect(() => {
    if (!containerRef.current) return;
    const controller = initIslands(createReactHydrate(), {
      selector: '.ox-content [data-ox-island]',
    });
    return () => controller.destroy();
  }, []);

  return createElement('div', {
    className: 'ox-content',
    ref: containerRef,
    dangerouslySetInnerHTML: { __html: rawHtml },
  });
}
"
`;

exports[`transformMarkdownWithReact > uses the static html path when no registered component is present 1`] = `
"
import React, { createElement } from 'react';

export const frontmatter = {};

const rawHtml = "<h1 id=\\"plain\\">Plain</h1>\\n<Unknown />\\n";

export default function MarkdownContent() {
  return createElement('div', {
    className: 'ox-content',
    dangerouslySetInnerHTML: { __html: rawHtml },
  });
}
"
`;
